--- a/css/contact.css
+++ b/css/contact.css
@@ -1,3 +1,56 @@
 @import url(module/header.css);
 @import url(module/footer.css);
 
+.contents_box{
+    padding: 120px 0 0;
+    text-align: center;
+}
+
+.contents_title{
+    color: var(--red);
+    font-family: var(--josefin);
+    font-size: 2.5rem;
+    padding: 0 0 20px 0;
+}
+
+.contents_text{
+    line-height: 1.5rem;
+    letter-spacing: 0.01rem;
+}
+
+.contents_form{
+    padding: 52px 0 0;
+    width: 332px;
+    margin: 0 auto;
+}
+
+.form_label{
+    display: block;
+    text-align: left;
+    font-family: var(--josefin);
+    color: #868686;
+    font-size: 1.25rem;
+    padding: 0 0 8px 0;
+}
+
+.form_input_area{
+    text-align: left;
+    width: 100%;
+    border: 1px solid #868686;
+    padding: 8px;
+}
+
+.form_box{
+    padding: 0 0 24px 0;
+}
+
+.form_submit{
+    font-family: var(--josefin);
+    color: #fff;
+    font-size: 1.25rem;
+    background: var(--red);
+    padding: 10px 40px;
+    width: 160px;
+    border-radius: 25px;
+}
+
