--- a/css/module/header.css
+++ b/css/module/header.css
@@ -4,6 +4,14 @@ header{
     align-items: center;
 }
 
+.sp_header{
+    display: none;
+}
+
+.pc_header{
+    display: block;
+}
+
 .header_index{
     justify-content: space-between;
     background: url(../../images/main_pc.png) center / cover;
@@ -79,4 +87,147 @@ header{
     font-family: var(--josefin);
     font-size: 1.75rem;
     padding: 16px 40px;
+}
+
+
+
+
+
+
+/*
+hamburger(ハンバーガーアイコン)
+=================================== */
+.hamburger {
+    position: absolute;
+    right: 40px;
+    top: 40px;
+    width: 50px;
+    height: 40px;
+    cursor: pointer;
+    z-index: 300;
+}
+
+.hamburger__line {
+    position: absolute;
+    width: 50px;
+    height: 4px;
+    border-radius: 4px;
+    right: 0;
+    background-color: #fff;
+    transition: all 0.5s;
+}
+
+.hamburger__line--1 {
+    top: 1px;
+}
+
+.hamburger__line--2 {
+    top: 18px;
+}
+
+.hamburger__line--3 {
+    top: 36px;
+}
+
+/*ハンバーガーがクリックされたら*/
+.open .hamburger__line--1 {
+    transform: rotate(-45deg);
+    top: 11px;
+}
+
+.open .hamburger__line--2 {
+    opacity: 0;
+}
+
+.open .hamburger__line--3 {
+    transform: rotate(45deg);
+    top: 11px;
+}
+
+/*
+sp-nav(ナビ)
+=================================== */
+.sp-nav {
+    position: fixed;
+    right: -100%;
+    /*ハンバーガーがクリックされる前はWindow右側に隠す*/
+    top: 0;
+    width: 80%;
+    /* 出てくるスライドメニューの幅 */
+    height: 100vh;
+    background-color: var(--red);
+    transition: all 0.5s;
+    z-index: 200;
+    overflow-y: auto;
+    /* メニューが多くなったらスクロールできるように */
+}
+
+.sp_menu{
+    padding: 120px 0 0 40px;
+}
+
+.sp_menu li{
+    font-size: 1.65rem;
+    letter-spacing: 0.01rem;
+    padding: 0 0 32px 0;
+}
+
+
+/*ハンバーガーがクリックされたら右からスライド*/
+.open .sp-nav {
+    right: 0;
+}
+
+
+/*
+black-bg(ハンバーガーメニュー解除用bg)
+=================================== */
+.black-bg {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: #000;
+    opacity: 0;
+    visibility: hidden;
+    transition: all 0.5s;
+    cursor: pointer;
+    z-index: 100;
+}
+
+/*ハンバーガーメニューが開いたら表示*/
+.open .black-bg {
+    opacity: 0.3;
+    visibility: visible;
+}
+
+
+
+
+
+
+@media screen and (max-width: 1280px){
+    .header__box{
+        width: 100%;
+        padding: 40px 40px 0;
+    }
+}
+
+@media screen and (max-width: 980px){
+    .header__main_title{
+        font-size: 2.75rem;
+        text-align: center;
+        padding: 0 8px 0;
+    }
+}
+
+@media screen and (max-width: 560px){
+    .pc_header{
+        display: none;
+    }
+
+    .sp_header{
+        display: block;
+    }
 }
