:construction: implementing responsive design

--- a/css/index.css
+++ b/css/index.css
@@ -1,18 +1,16 @@
 @import url(module/header.css);
 @import url(module/footer.css);
+@import url(module/common.css);
 
-.contents__box{
+.contents_box{
     padding: 120px 0 0;
 }
 
-.contents__box_title{
+.index_contents_title{
     text-align: center;
-    color: var(--red);
-    font-family: var(--josefin);
-    font-size: 2.5rem;
 }
 
-.contents__box_des{
+.contents_text{
     margin: 0 auto;
     text-align: center;
     width: 740px;
@@ -22,7 +20,7 @@
     line-height: 1.65rem;
 }
 
-.contents__box_link{
+.contents_text_link{
     text-align: center;
     padding: 36px 0 0;
     font-family: var(--josefin);
@@ -30,47 +28,8 @@
     font-size: 1.5rem;
 }
 
-.contents__box_link:hover{
+.contents_text_link:hover{
     text-decoration: underline;
-}
-
-.contents__box_list{
-    max-width: 1280px;
-    margin: 0 auto;
-    padding: 40px 0 60px;
-    display: grid;
-    grid-template-columns: 275px 275px 275px 275px;
-    grid-row-gap: 60px;
-    grid-column-gap: 60px;
-    justify-items: center;
-}
-
-.contents__box_list li{
-    width: 275px;
-    text-align: center;
-}
-
-.recipe__box_image img{
-    width: 100%;
-}
-
-.recipe__box_category{
-    color: #878787;
-    padding: 16px 0 0 0;
-    font-family: var(--josefin);
-}
-
-.recipe__box_title{
-    font-size: 1.5rem;
-    padding: 8px 0 0 0;
-    font-family: var(--josefin);
-}
-
-.recipe__box_des{
-    font-size: 1rem;
-    letter-spacing: 0.01rem;
-    line-height: 1.5rem;
-    padding:8px 0 0 0;
 }
 
 .recipe_button{
@@ -87,30 +46,10 @@
     padding: 20px 60px;
 }
 
-@media screen and (max-width: 1280px){
-    .contents__box_list{
-        width: 100%;
-        justify-content: center;
-        grid-column-gap: 52px;
-        grid-template-columns: 275px 275px 275px;
-    }
-}
-
 @media screen and (max-width: 980px){
-    .contents__box_list{
-        grid-template-columns: 275px 275px;
-    }
-
-    .contents__box_des{
+    .contents_text{
         width: 100%;
         padding: 20px 40px 0;
-    }
-}
-
-@media screen and (max-width: 560px){
-    .contents__box_list{
-        grid-column-gap: 0;
-        grid-template-columns: 275px;
     }
 }
 
