--- a/css/about_us.css
+++ b/css/about_us.css
@@ -1,26 +1,23 @@
 @import url(module/header.css);
 @import url(module/footer.css);
+@import url(module/common.css);
 
 .contents_box{
     padding: 120px 0 0;
     max-width: 1280px;
     margin: 0 auto;
-}
-
-.about_us_section{
     display: grid;
     grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
 }
 
 .about_us_des_box{
+    grid-row: 1 / 2 ;
     grid-column: 1 / 2;
     max-width: 520px;
 }
 
-.contents_title{
-    font-size: 2.5rem;
-    color: var(--red);
-    font-family: var(--josefin);
+.about_us_title,.our_history_title{
     padding: 0 0 40px 0;
 }
 
@@ -33,6 +30,7 @@
 
 .contents_img_box{
     grid-column: 2 / 3;
+    grid-row: 1 / 2;
     position: relative;
 }
 
@@ -67,18 +65,14 @@
     bottom:0;
 }
 
-.our_history_section{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    margin: 120px 0 200px;
-}
-
 .our_history_img_box{
     grid-column: 1 / 2;
+    grid-row: 2 / 3;
     position: relative;
 }
 
 .our_history_des_box{
+    grid-row: 2 / 3;
     grid-column: 2 / 3;
     padding: 140px 0 0 120px;
 }
@@ -114,16 +108,99 @@
     left: 40px;
 }
 
-.our_history_title{
-    font-size: 2.5rem;
-    color: var(--red);
-    font-family: var(--josefin);
-    padding: 0 0 40px 0;
-}
-
 .our_history_text{
     font-size: 1.125rem;
     letter-spacing: 0.02rem;
     line-height: 1.7rem;
     padding: 0 0 24px 0;
+}
+
+@media screen and (max-width: 1280px){
+    .contents_text{
+        width: 100%;
+        padding: 20px 40px 0;
+    }
+}
+
+@media screen and (max-width: 540px){
+    .contents_box {
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 1fr 1fr 1fr;
+    }
+
+    .about_us_des_box {
+        grid-row: 1 / 2;
+        grid-column: 1 / 2;
+        width: 100%;
+    }
+
+    .contents_img_box {
+        grid-column: 1 / 2;
+        grid-row: 2 / 3;
+    }
+
+    .contents_img_box_bg {
+        display: block;
+        width: 280px;
+        height: 280px;
+        position: absolute;
+        right: 0;
+        top: 0;
+    }
+
+    .contents_img {
+        position: absolute;
+        right: 0;
+        top: 0;
+    }
+
+    .contents_img img {
+        display: block;
+        width: 280px;
+    }
+
+    .contents_sub_title {
+        font-size: 2.5rem;
+        top: 0;
+        right: 0;
+    }
+
+    .our_history_img_box {
+        grid-column: 1 / 2;
+        grid-row: 3 / 4;
+        position: relative;
+    }
+
+    .our_history_img_box_bg {
+        display: block;
+        width: 280px;
+        height: 280px;
+        background: var(--yellow);
+        position: absolute;
+        left: 0;
+        top: 0;
+    }
+
+    .our_history_img {
+        position: absolute;
+        left: 0;
+        top: 0;
+    }
+
+    .our_history_img img {
+        display: block;
+        width: 280px;
+    }
+
+    .our_history_sub_title {
+        font-size: 2.5rem;
+        top: 0;
+        left: 0;
+    }
+
+    .our_history_des_box {
+        grid-row: 4 / 5;
+        grid-column: 1 / 2;
+        padding: 0;
+    }
 }
