--- a/css/contact.css
+++ b/css/contact.css
@@ -1,16 +1,10 @@
 @import url(module/header.css);
 @import url(module/footer.css);
+@import url(module/common.css);
 
 .contents_box{
     padding: 120px 0 0;
     text-align: center;
-}
-
-.contents_title{
-    color: var(--red);
-    font-family: var(--josefin);
-    font-size: 2.5rem;
-    padding: 0 0 20px 0;
 }
 
 .contents_text{
@@ -52,5 +46,15 @@
     padding: 10px 40px;
     width: 160px;
     border-radius: 25px;
+}
+
+@media screen and (max-width: 560px){
+    .contents_text{
+        padding: 0 20px 0;
+    }
+
+    .contents_form{
+        width: 300px;
+    }
 }
 
