--- a/css/recipe_detail.css
+++ b/css/recipe_detail.css
@@ -1,17 +1,12 @@
 @import url(module/header.css);
 @import url(module/footer.css);
+@import url(module/common.css);
 
 .wrapper{
     display: flex;
     max-width: 1280px;
     margin: 0 auto;
     padding: 100px 0 0;
-}
-
-.contents_title{
-    color: var(--red);
-    font-family: var(--josefin);
-    font-size: 2.5rem;
 }
 
 .contents_ingredients{
@@ -83,4 +78,47 @@
     top: 25%;
     -webkit-transform: translateY(-50%);
     transform: translateY(-50%);
+}
+
+@media screen and (max-width: 1280px){
+    .wrapper {
+        padding: 100px 80px 0;
+    }
+}
+
+
+@media screen and (max-width: 980px){
+    .wrapper {
+        flex-flow: column;
+    }
+
+    .recipes_detail_title{
+        text-align: center;
+    }
+
+    .contents_ingredients{
+        padding: 0;
+    }
+
+    .contents_ingredients_box {
+        width: 100%;
+        padding: 32px 32px 0;
+    }
+
+    .contents_instructions{
+        padding: 40px 0 0;
+        border-left: none;
+    }
+
+    .contents_instructions_list {
+        padding: 32px 32px 0;
+    }
+
+    .contents_instructions_list li {
+        padding: 0 0 32px 36px;
+    }
+
+    .contents_instructions_list li:before {
+        top: 12%;
+    }
 }
