--- a/css/recipes.css
+++ b/css/recipes.css
@@ -1,62 +1,40 @@
 @import url(module/header.css);
 @import url(module/footer.css);
+@import url(module/common.css);
+@import url(module/splide.min.css);
 
-.contents__box:first-child{
-    padding: 120px 0 60px;
-}
-
-.contents__box{
-    padding: 20px 0 60px;
-}
-
-.contents__box:last-child{
-    padding: 20px 0 0;
-}
-
-.contents__box_title{
+.recipes_contents_title{
     text-align: center;
-    color: var(--red);
-    font-family: var(--josefin);
-    font-size: 2.5rem;
 }
 
-.contents__box_list{
+.contents_box:first-child{
+    padding: 120px 0;
+}
+
+.carousel_box{
     max-width: 1280px;
     margin: 0 auto;
-    padding: 40px 0 0;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    justify-items: center;
 }
 
-.contents__box_list li{
-    width: 275px;
-    text-align: center;
-}
-
-.recipe__box_image img{
+.splide__slide a img{
     width: 100%;
 }
 
-.recipe__box_category{
-    color: #878787;
-    padding: 16px 0 0 0;
-    font-family: var(--josefin);
+@media screen and (max-width: 1280px){
+    .carousel_box{
+        width: 980px;
+    }
 }
 
-.recipe__box_title{
-    font-size: 1.5rem;
-    padding: 8px 0 0 0;
-    font-family: var(--josefin);
+@media screen and (max-width: 1080px){
+    .carousel_box{
+        width: 740px;
+    }
 }
 
-.recipe__box_des{
-    font-size: 1rem;
-    letter-spacing: 0.01rem;
-    line-height: 1.5rem;
-    padding:8px 0 0 0;
+@media screen and (max-width: 540px){
+    .carousel_box{
+        width: 320px;
+    }
 }
 
-.recipe_button{
-    text-align: center;
-}
