--- a/css/about_us.css
+++ b/css/about_us.css
@@ -3,17 +3,15 @@
 @import url(module/common.css);
 
 .contents_box{
+    display: flex;
     padding: 120px 0 0;
     max-width: 1280px;
     margin: 0 auto;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
+    justify-content: space-between;
+    align-items: center;
 }
 
-.about_us_des_box{
-    grid-row: 1 / 2 ;
-    grid-column: 1 / 2;
+.contents_des_box{
     max-width: 520px;
 }
 
@@ -28,179 +26,59 @@
     padding: 0 0 24px 0;
 }
 
-.contents_img_box{
-    grid-column: 2 / 3;
-    grid-row: 1 / 2;
-    position: relative;
-}
-
-.contents_sub_title{
-    position: absolute;
-    font-family: var(--josefin);
-    color: #fff;
-    font-size: 5.625rem;
-    bottom: -70px;
-    right: 42px;
-}
-
-.contents_img img{
+.contents_img_box img{
     display: block;
-    width: 560px;
+    width: 687px;
 }
 
-.contents_img_box_bg{
-    display: block;
-    width: 480px;
-    height: 460px;
-    background: var(--yellow);
 
-    position: absolute;
-    right: 0;
-    top: 77px;
-}
 
-.contents_img{
-    position: absolute;
-    right: 128px;
-    bottom:0;
-}
-
-.our_history_img_box{
-    grid-column: 1 / 2;
-    grid-row: 2 / 3;
-    position: relative;
-}
-
-.our_history_des_box{
-    grid-row: 2 / 3;
-    grid-column: 2 / 3;
-    padding: 140px 0 0 120px;
-}
-
-.our_history_img_box_bg{
-    display: block;
-    width: 480px;
-    height: 460px;
-    background: var(--yellow);
-
-    position: absolute;
-    left: 0;
-    top: 0;
-}
-
-.our_history_img{
-    position: absolute;
-    left: 128px;
-    top:77px;
-}
-
-.our_history_img img{
-    display: block;
-    width: 560px;
-}
-
-.our_history_sub_title{
-    position: absolute;
-    font-family: var(--josefin);
-    color: #fff;
-    font-size: 5.625rem;
-    top: 40px;
-    left: 40px;
-}
-
-.our_history_text{
-    font-size: 1.125rem;
-    letter-spacing: 0.02rem;
-    line-height: 1.7rem;
-    padding: 0 0 24px 0;
-}
 
 @media screen and (max-width: 1280px){
-    .contents_text{
-        width: 100%;
-        padding: 20px 40px 0;
+    .contents_box{
+        padding: 120px 40px 0;
+    }
+
+    .contents_img_box img{
+        width: 587px;
+    }
+
+    .about_us_des_box{
+        padding: 0 40px 0 0;
+    }
+
+    .our_history_des_box{
+        padding: 0 0 0 40px;
+    }
+}
+
+@media screen and (max-width: 1080px){
+    .contents_img_box img{
+        width: 487px;
+    }
+}
+
+@media screen and (max-width: 980px){
+    .contents_box{
+        flex-flow: column;
+    }
+
+    .about_us_des_box{
+        order: 1;
+    }
+
+    .about_us_img_box{
+        order: 0;
     }
 }
 
 @media screen and (max-width: 540px){
-    .contents_box {
-        grid-template-columns: 1fr;
-        grid-template-rows: 1fr 1fr 1fr 1fr;
+    .contents_img_box{
+        padding: 0 20px 0;
     }
 
-    .about_us_des_box {
-        grid-row: 1 / 2;
-        grid-column: 1 / 2;
+    .contents_img_box img{
         width: 100%;
     }
-
-    .contents_img_box {
-        grid-column: 1 / 2;
-        grid-row: 2 / 3;
-    }
-
-    .contents_img_box_bg {
-        display: block;
-        width: 280px;
-        height: 280px;
-        position: absolute;
-        right: 0;
-        top: 0;
-    }
-
-    .contents_img {
-        position: absolute;
-        right: 0;
-        top: 0;
-    }
-
-    .contents_img img {
-        display: block;
-        width: 280px;
-    }
-
-    .contents_sub_title {
-        font-size: 2.5rem;
-        top: 0;
-        right: 0;
-    }
-
-    .our_history_img_box {
-        grid-column: 1 / 2;
-        grid-row: 3 / 4;
-        position: relative;
-    }
-
-    .our_history_img_box_bg {
-        display: block;
-        width: 280px;
-        height: 280px;
-        background: var(--yellow);
-        position: absolute;
-        left: 0;
-        top: 0;
-    }
-
-    .our_history_img {
-        position: absolute;
-        left: 0;
-        top: 0;
-    }
-
-    .our_history_img img {
-        display: block;
-        width: 280px;
-    }
-
-    .our_history_sub_title {
-        font-size: 2.5rem;
-        top: 0;
-        left: 0;
-    }
-
-    .our_history_des_box {
-        grid-row: 4 / 5;
-        grid-column: 1 / 2;
-        padding: 0;
-    }
 }
+
