--- a/css/index.css
+++ b/css/index.css
@@ -53,5 +53,16 @@
     }
 }
 
+@media screen and (max-width: 540px){
+    .contents_box{
+        padding: 100px 0 0;
+    }
+
+    .recipe_button a{
+        font-size: 1.2rem;
+        padding: 16px 40px;
+    }
+}
+
 
 
