--- a/css/about_us.css
+++ b/css/about_us.css
@@ -2,6 +2,12 @@
 @import url(module/footer.css);
 @import url(module/common.css);
 
+/*********************************************
+
+about_us.css
+
+ *********************************************/
+
 .contents_box {
     display: flex;
     padding: 120px 0 0;
@@ -31,7 +37,11 @@
     width: 687px;
 }
 
+/*
+ * media query
+ */
 
+/* max-width 1280px */
 @media screen and (max-width: 1280px) {
     .contents_box {
         padding: 120px 40px 0;
@@ -50,12 +60,14 @@
     }
 }
 
+/* max-width 1080px */
 @media screen and (max-width: 1080px) {
     .contents_img_box img {
         width: 487px;
     }
 }
 
+/* max-width 980px */
 @media screen and (max-width: 980px) {
     .contents_box {
         flex-flow: column;
@@ -70,6 +82,7 @@
     }
 }
 
+/* max-width 540px */
 @media screen and (max-width: 540px) {
     .contents_box {
         padding: 100px 32px 0;
