--- a/css/contact.css
+++ b/css/contact.css
@@ -2,6 +2,12 @@
 @import url(module/footer.css);
 @import url(module/common.css);
 
+/*********************************************
+
+contact.css
+
+ *********************************************/
+
 .contents_box{
     padding: 120px 0 0;
     text-align: center;
@@ -45,14 +51,17 @@
     padding: 8px;
 }
 
+/*If the form check succeeds*/
 .input-control.success input, .input-control.success textarea{
     border-color: #09c372;
 }
 
+/*If the form check error*/
 .input-control.error input, .input-control.error textarea {
     border-color: #ff3860;
 }
 
+/*Display the error amount if the form check is an error*/
 .input-control .error {
     color: #ff3860;
     font-size: 9px;
@@ -60,6 +69,10 @@
     text-align: left;
     padding: 4px 0 0;
 }
+
+/*
+ * Modal is displayed after submit button is pressed
+ */
 
 .modal {
     display: none;
@@ -83,6 +96,7 @@
     animation-duration: 1s;
 }
 
+/*modal animation*/
 @keyframes modalopen {
     from {opacity: 0}
     to {opacity: 1}
@@ -115,7 +129,12 @@
     line-height: 1.7rem;
 }
 
+/*
+ * media query
+ */
 
+
+/* max-width 560px */
 @media screen and (max-width: 560px){
     .contents_box{
         padding: 100px 0 0;
@@ -130,6 +149,7 @@
     }
 }
 
+/* max-width 420px */
 @media screen and (max-width: 420px){
     .modal-body p{
         padding:0 20px 0;
