--- a/css/module/footer.css
+++ b/css/module/footer.css
@@ -1,3 +1,9 @@
+/*********************************************
+
+footer.css
+
+ *********************************************/
+
 footer {
     margin: 120px 0 0;
     background: var(--red);
@@ -53,6 +59,12 @@ footer {
     padding: 120px 0 20px;
 }
 
+
+/*
+ * media query
+ */
+
+/* max-width 1280px */
 @media screen and (max-width: 1280px) {
     .footer_box {
         width: 100%;
@@ -60,6 +72,7 @@ footer {
     }
 }
 
+/* max-width 560px */
 @media screen and (max-width: 560px) {
     footer {
         margin: 100px 0 0;
