--- a/css/reset.css
+++ b/css/reset.css
@@ -2,7 +2,7 @@
 :root {
     --yellow: #FEDF90;
     --orange: #FDC229;
-    --red: #FF6550;
+    --red: #F15A45;
     --josefin: 'Josefin Sans', sans-serif
 }
 
